Fix SizeLabelToMinWidth() function such that no unnecessary space between warning label and Discard button on download shelf.

Note, this bug has been there for more than 3 years. The string
change in crrev.com/2443343002 exposed this issue. The reason this bug
was only reproducible on Win is because Win's font is narrower than
other OSs' (a.k.a label with the same text on Win yields a smaller width)

BUG=668472

Review-Url: https://codereview.chromium.org/2556573002
Cr-Commit-Position: refs/heads/master@{#437563}

Former-commit-id: 047611df69b7f337f96d4ce684d21cb69baeb0b8